Add Hiera examples to README